package com.syc.carpentry;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class CarpentryApplication {

	public static void main(String[] args) {
		SpringApplication.run(CarpentryApplication.class, args);
	}

}
