package com.syc.carpentry.repository;

import org.springframework.data.jpa.repository.JpaRepository;

import com.syc.carpentry.model.Usuario;

import java.util.Optional;

public interface UsuarioRepository extends JpaRepository<Usuario, Long> {

    Optional<Usuario> findByEmail(String email);
    Optional<Usuario> findByUsername(String username);
}
